--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <link href="./src/output.css" rel="stylesheet">
     <title>Poker Helper</title>
 </head>
 <body>
